# snake

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  conanfile.txt
src/: CMakeLists.txt
src/snake/: main.cpp
